# consent-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.agents/skills/consent-audit/: SKILL.md
.claude/skills/consent-audit/: SKILL.md
.github/workflows/: ci.yml  release.yml
.planning/: 2026-05-26-v0.6.0-accuracy.md  2026-05-28-v0.6.2-review-fixes.md  2026-05-28-v0.6.3-full-scan.md
.playwright-mcp/: page-2026-05-28T15-55-52-878Z.yml
data/vendor_library/: vendors.json
data/wiki/concepts/: cmp-failures.md  consent-mode-v2.md  gpc-signal.md  ssgtm-risk.md
data/wiki/enforcement/: emerging-trends.md  gdpr-fines.md  us-class-actions.md  us-enforcement.md
data/wiki/regulations/: ccpa.md  us-state-laws.md
data/wiki/technical/: cmp-profiles.md  consent-mode-impact.md  google-tag-gateway.md  scanner-methodology.md
docs/: scenarios.md
docs/release-v0.5.0/: README.md  cve-scan.md  e2e-smoke-test.md  jurisdiction-validation.md  security-audit.md  type-coverage.md
docs/sample-audit/: README.md  audit_result.json  deck.html  deck.marp.md  evidence.jsonl  executive_summary.md  report.html
evals/: README.md  run_evals.py
evals/cases/: 001-clean-baseline.yaml  001-onetrust-marketing-site.yaml  002-anthropic-marketing-site.yaml  003-no-cmp-baseline.yaml  004-cresta-marketing-site.yaml  005-truyo-cmp-detection.yaml  006-cookiebot-eu-tld.yaml  007-ketch-headless-cmp.yaml  008-didomi-shadow-dom.yaml
src/consent_engine/: __init__.py  api.py  audit.py  cli.py  config.py  mcp_server.py  security.py
src/consent_engine/data/vendor_library/: vendors.json
src/consent_engine/data/wiki/: CLAUDE.md  index.md  log.md
src/consent_engine/data/wiki/concepts/: cipa-vppa.md  consent-mode-v2.md  dark-patterns.md
src/consent_engine/data/wiki/enforcement/: lawsuit-surge.md  live-fines-db.md  us-enforcement.md
src/consent_engine/data/wiki/regulations/: gdpr.md  pipeda.md  quebec-law25.md  tcf.md
src/consent_engine/data/wiki/technical/: scanner-methodology.md
src/consent_engine/llm/: client.py
src/consent_engine/models/: audit_request.py  audit_result.py  scan_result.py  vendor.py
src/consent_engine/templates/: audit_deck.marp.md.j2  audit_report.html.j2
src/consent_engine/tools/: cmp_clicker.py  cmp_detector.py  cmp_injector.py  cmp_runtime_introspect.py  jurisdiction_detector.py  tool_01_gtm_parser.py  tool_02_violation_classifier.py  tool_03_browser_scanner.py  tool_04_har_analyzer.py  tool_05_vendor_library.py  tool_06_ssgtm_detector.py  tool_06b_pixel_detector.py  tool_07_rag_retriever.py  tool_08_report_generator.py
templates/: audit_deck.marp.md.j2
tests/: test_api.py  test_cmp_clicker.py  test_cmp_precedence.py  test_jurisdiction_detection.py  test_jurisdiction_exposure.py  test_jurisdiction_prose.py  test_mcp_server.py  test_methodology_gating.py  test_no_gcs_methodology.py  test_security.py  test_skill.py  test_smoke.py
tests/tools/: conftest.py  test_tool_03_browser_scanner.py
