[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consent-engine"
version = "0.3.3"
description = "Forensic consent-compliance audit engine. Deterministic by design."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Kenneth Buchanan", email = "kennethbuchanan23@gmail.com" },
]
keywords = [
    "consent", "ccpa", "gdpr", "cipa", "privacy", "compliance",
    "audit", "playwright", "consent-mode", "onetrust", "gtm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.40.0",
    "litellm>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.48.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "openai>=1.50.0",
    "aiofiles>=24.1.0",
    "tldextract>=5.0.0",
    "markdown>=3.10.2",
    "google-auth>=2.30.0",
    "python-multipart>=0.0.26",
    "scrapling[fetchers]>=0.4.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
chat = ["anthropic>=0.40.0"]

[project.urls]
Homepage = "https://github.com/kb223/consent-engine"
Repository = "https://github.com/kb223/consent-engine"
Issues = "https://github.com/kb223/consent-engine/issues"
"Author site" = "https://kennethjbuchanan.com"

[project.scripts]
consent-engine = "consent_engine.cli:main"
consent-engine-mcp = "consent_engine.mcp_server:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-jinja2",
    "types-markdown>=3.10.2.20260211",
]

[tool.hatch.build.targets.wheel]
packages = ["src/consent_engine"]

# Bundle non-Python resources (vendor library, wiki, Jinja2 templates) inside
# the wheel so a `pip install` / `uvx` deployment is fully self-contained.
[tool.hatch.build.targets.wheel.shared-data]
"src/consent_engine/data" = "consent_engine/data"
"src/consent_engine/templates" = "consent_engine/templates"

[tool.hatch.build]
include = [
  "src/consent_engine/**/*.py",
  "src/consent_engine/data/**/*.json",
  "src/consent_engine/data/**/*.csv",
  "src/consent_engine/data/**/*.md",
  "src/consent_engine/templates/**/*.j2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["markdown"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
